# allegro_suppliers

./: .gitignore  Dockerfile  Dockerfile.cron  README.md  categories.json  categoriy_info.json  docker-compose.yml  example.env  gunicorn_conf.py  params_supp_by_cat.json  product_details.json  products.json  products_search.json  pyproject.toml  response.json  responsible_persons.json  single_offer_details.json  test.py  with_missing_params.json
app/: ark_worker.py  database.py  loggers.py  main.py  main_scheduler.py  utils.py
app/api/: deps.py
app/api/v1/: api.py  scheduler_api.py
app/api/v1/routers/: allegro_offerta_update.py  allegro_tokens.py  auth.py  filter_product_file_csv.py  scheduler_routes.py  users.py
app/core/: bg_task_wrapper.py  config.py
app/models/: allegro_token.py  database_models.py
app/scheduler_service/: scheduler.py  scheduler_tasks.py
app/schemas/: pydantic_models.py  token.py
app/services/: allegro_token.py  synchro_products_funcs.py  updates.py
app/services/configs/: AllegroConfig.py
app/services/modules/: APITokenManager.py  AlegroApiManager.py  DatabaseManager.py  DownloadGrowboxXML.py  DownloadXML.py  ParsingManager.py
app/services/modules/DataFiltering/: GetAllData.py  GetAllegroData.py  GetAmazonData.py
app/services/scheduler_service/: arq_task_handlers.py  arq_tasks.py  scheduler_tasks.py
migrations/: env.py
migrations/versions/: 011bf31fdac5_change_id_to_uuid_string.py  a0b0ffb7d8f1_add_belongs_to_col.py  b8c7ebc6d275_added_tokens_table.py
scheduler_xml/: pgn.json  pgn.xml
(+2 files in other folders)
