[tool.poetry]
name = "allegro_suppliers"
version = "0.1.0"
description = "Default description of the project!"
authors = ["Izbushko izbushko@example.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.0"
fastapi = "^0.105.0"
websocket = "^0.2.1"
psycopg2-binary = "^2.9.9"
sqlmodel = "^0.0.14"
pydantic-settings = "^2.1.0"
passlib = "^1.7.4"
asyncpg = "^0.29.0"
uvicorn = "^0.24.0.post1"
pyjwt = "^2.8.0"
pydantic = {extras = ["email"], version = "^2.5.2"}
python-multipart = "^0.0.6"
gunicorn = "^21.2.0"
bcrypt = "4.0.1"
apscheduler = "^3.10.4"
httpx = "^0.27.0"
motor = "^3.4.0"
aiohttp = "^3.9.5"
websockets = "^12.0"
requests = "^2.32.3"
xmltodict = "^0.13.0"
pydash = "^8.0.1"
jsonpath-ng = "^1.6.1"
lxml = "^5.2.2"
aiofiles = "^23.2.1"


[tool.poetry.group.dev.dependencies]
langchain = "^0.0.350"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
